--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -9,20 +9,22 @@
     android:orientation="vertical">
 
     <ImageView
+        android:contentDescription="@string/nav_header_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher_round"/>
+        android:src="@mipmap/ic_launcher_round" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Test"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+        android:paddingTop="8dp"
+        android:text="@string/nav_header_username"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="test"/>
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        android:text="@string/nav_header_gotoprofile"/>
 
 </LinearLayout>
