--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="wrap_content"
@@ -11,7 +13,8 @@
 
         <!-- Sezione del nome del file -->
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/nome_linearLayout"
+            android:id="@+id/nome_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -24,7 +27,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edittext_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -40,80 +43,87 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Sezione Università -->
-        <LinearLayout
-            android:id="@+id/uni_linearLayout"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/uni_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingStart="16dp"
-            android:paddingTop="16dp"
             android:paddingEnd="16dp"
-            app:layout_constraintBottom_toTopOf="@id/dep_linearLayout"
-            app:layout_constraintTop_toBottomOf="@id/nome_linearLayout">
+            app:layout_constraintTop_toBottomOf="@id/nome_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/universita" />
-
-            <Spinner
-                android:id="@+id/uni_spinner"
+            <AutoCompleteTextView
+                android:id="@+id/uni_autocompletetextview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:gravity="end" />
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:ems="10"
+                android:padding="16dp"
+                android:hint="@string/seleziona_l_universit"
+                android:lines="1"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:completionThreshold="0"/>
 
-        </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Sezione Dipartimento -->
-        <LinearLayout
-            android:id="@+id/dep_linearLayout"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/dep_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingStart="16dp"
-            android:paddingTop="16dp"
+            android:paddingTop="8dp"
             android:paddingEnd="16dp"
-            app:layout_constraintTop_toBottomOf="@id/uni_linearLayout">
+            app:layout_constraintTop_toBottomOf="@id/uni_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dipartimento" />
-
-            <Spinner
-                android:id="@+id/dep_spinner"
+            <AutoCompleteTextView
+                android:id="@+id/dep_autocompletetextview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:gravity="end" />
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:ems="10"
+                android:padding="16dp"
+                android:hint="@string/seleziona_il_dipartimento"
+                android:lines="1"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:completionThreshold="0"/>
 
-        </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Sezione Corsi -->
-        <LinearLayout
-            android:id="@+id/courses_linearLayout"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/courses_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingStart="16dp"
-            android:paddingTop="16dp"
+            android:paddingTop="8dp"
             android:paddingEnd="16dp"
-            app:layout_constraintTop_toBottomOf="@id/dep_linearLayout">
+            app:layout_constraintTop_toBottomOf="@id/dep_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/corso" />
-
-            <Spinner
-                android:id="@+id/courses_spinner"
+            <AutoCompleteTextView
+                android:id="@+id/courses_autocompletetextview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:gravity="end" />
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:ems="10"
+                android:padding="16dp"
+                android:hint="@string/seleziona_il_corso"
+                android:lines="1"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:completionThreshold="0"/>
 
-        </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Sezione Anno accademico e professore -->
         <LinearLayout
@@ -121,56 +131,62 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/courses_linearLayout"
+            app:layout_constraintTop_toBottomOf="@id/courses_layout"
             android:baselineAligned="false">
 
-            <LinearLayout
-                android:id="@+id/aa_linearLayout"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/prof_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingStart="16dp"
-                android:paddingTop="16dp"
-                android:paddingEnd="16dp"
-                android:layout_weight="0.5">
+                android:paddingTop="8dp"
+                android:paddingEnd="8dp"
+                android:layout_weight="0.4"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/a_a" />
-
-                <Spinner
-                    android:id="@+id/aa_spinner"
+                <AutoCompleteTextView
+                    android:id="@+id/prof_autocompletetextview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:gravity="end" />
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:ems="10"
+                    android:padding="16dp"
+                    android:hint="@string/seleziona_il_professore"
+                    android:lines="1"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:completionThreshold="0"/>
 
-            </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
-                android:id="@+id/prof_linearLayout"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/aa_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingStart="16dp"
-                android:paddingTop="16dp"
+                android:paddingStart="8dp"
+                android:paddingTop="8dp"
                 android:paddingEnd="16dp"
-                android:layout_weight="0.5">
+                android:layout_weight="0.6"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/professore" />
-
-                <Spinner
-                    android:id="@+id/prof_spinner"
+                <com.example.communidrive.InstantAutoComplete
+                    android:id="@+id/aa_autocompletetextview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:gravity="end" />
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:ems="10"
+                    android:padding="16dp"
+                    android:hint="@string/seleziona_l_a_a"
+                    android:lines="1"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:completionThreshold="0"/>
 
-            </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
 
@@ -183,53 +199,59 @@
             app:layout_constraintTop_toBottomOf="@id/aa_prof_linearLayout"
             android:baselineAligned="false">
 
-            <LinearLayout
-                android:id="@+id/type_linearLayout"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/type_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingStart="16dp"
-                android:paddingTop="16dp"
-                android:paddingEnd="16dp"
-                android:layout_weight="0.5">
+                android:paddingTop="8dp"
+                android:paddingEnd="8dp"
+                android:layout_weight="0.4"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/tipologia" />
-
-                <Spinner
-                    android:id="@+id/type_spinner"
+                <com.example.communidrive.InstantAutoComplete
+                    android:id="@+id/type_autocompletetextview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:gravity="end" />
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:ems="10"
+                    android:padding="16dp"
+                    android:hint="@string/seleziona_la_tipologia"
+                    android:lines="1"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:completionThreshold="0"/>
 
-            </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
-                android:id="@+id/lang_linearLayout"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/lang_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingStart="16dp"
-                android:paddingTop="16dp"
+                android:paddingStart="8dp"
+                android:paddingTop="8dp"
                 android:paddingEnd="16dp"
-                android:layout_weight="0.5">
+                android:layout_weight="0.6"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/lingua2" />
-
-                <Spinner
-                    android:id="@+id/lang_spinner"
+                <com.example.communidrive.InstantAutoComplete
+                    android:id="@+id/lang_autocompletetextview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:gravity="end" />
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:ems="10"
+                    android:padding="16dp"
+                    android:hint="@string/seleziona_la_lingua"
+                    android:lines="1"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:completionThreshold="0"/>
 
-            </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
 
@@ -241,7 +263,8 @@
             android:layout_marginTop="16dp"
             android:text="@string/consento_di_rendere_la_mia_mail_pubblica"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/type_lang_linearLayout"/>
+            app:layout_constraintTop_toBottomOf="@+id/type_lang_linearLayout"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
 
         <Button
             android:id="@+id/filePicker_Button"
@@ -251,6 +274,7 @@
             android:layout_marginTop="16dp"
             android:text="@string/seleziona_il_file"
             app:layout_constraintStart_toStartOf="parent"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
             app:layout_constraintTop_toBottomOf="@+id/accept_checkbox" />
 
         <TextView
@@ -280,7 +304,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:text="@string/pubblica"
-            app:layout_constraintTop_toBottomOf="@+id/view" />
+            app:layout_constraintTop_toBottomOf="@+id/view"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"/>
 
         <View
             android:id="@+id/view2"
