- La lista delle note adesso caricherà sempre i documenti "sample" ogni volta che l'app viene avviata - La pagina singola delle note adesso contiene informazioni "randomizzate" ogni volta che l'app viene avviata - Il download dei file sposterà i file "sample" e quelli scelti dall'utente in una cartella dedicata all'interno del dispositivo - La pagina dell'upload dei file adesso carica il file all'iterno della lista delle note e può essere scaricato (come una nota normale) - La pagina della cronologia dei download adesso mostra i file scaricati nella cartella dedicata all'interno del dispositivo + Sistemazione generale del codice per garantire l'implementazione dei cambiamenti sopra citati

--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -58,6 +58,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
+            android:id="@+id/uploaded_by_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -93,9 +94,158 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/uni"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/uploaded_by_date">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Università: "/>
+
+            <!-- Università -->
+            <TextView
+                android:id="@+id/note_uni"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="uni"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/dep"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/uni">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dipartimento: "/>
+
+            <!-- Corso -->
+            <TextView
+                android:id="@+id/note_dep"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="dipartimento"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/course"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/dep">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Corso: "/>
+
+            <!-- Materia -->
+            <TextView
+                android:id="@+id/note_course"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="corso"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/mat_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/aa">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tipologia Materiale: "/>
+
+            <!-- Tipologia Materiale -->
+            <TextView
+                android:id="@+id/note_mat_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="materiale"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/aa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/course">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Anno accademico: "/>
+
+            <!-- Anno accademico -->
+            <TextView
+                android:id="@+id/note_aa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="aa"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/mat_type">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Descrizione: "/>
+
+            <!-- Descrizione -->
+            <TextView
+                android:id="@+id/note_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="descrizione"/>
+
+        </LinearLayout>
 
 
-        
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/description" />
+
+        <Button
+            android:id="@+id/download_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/scarica"
+            app:layout_constraintTop_toBottomOf="@+id/view"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"/>
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/download_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
