--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,7 @@
 
     <SearchView
         android:id="@+id/searchView"
-        style="?attr/searchViewStyle"
+        style="?attr/materialSearchViewPrefixStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
